--- a/package.json
+++ b/package.json
@@ -26,10 +26,21 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.15",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@types/eslint": "^7.29.0",
+    "@types/react": "18.0.1",
     "autoprefixer": "^10.3.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.3.6",
+    "prettier": "^2.7.1",
     "tailwindcss": "^2.2.7",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "typescript-eslint": "^0.0.1-alpha.0"
   }
 }
