--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "homepage": "https://github.com/qogita/frontend-challenge#readme",
   "dependencies": {
     "next": "^11.0.1",
+    "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/eslint": "^7.29.0",
     "@types/react": "18.0.1",
