--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "next dev",
     "build": "next build",
     "prestart": "npm run build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,21 +28,30 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
     "@reduxjs/toolkit": "^1.8.3",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@testing-library/dom": "^8.16.1",
     "@types/eslint": "^7.29.0",
+    "@types/jest": "^28.1.6",
     "@types/react": "18.0.1",
     "autoprefixer": "^10.3.1",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^28.1.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "postcss": "^8.3.6",
     "prettier": "^2.7.1",
     "tailwindcss": "^2.2.7",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.3.5",
     "typescript-eslint": "^0.0.1-alpha.0"
   }
