--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
     "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@reduxjs/toolkit": "^1.8.3",
     "@tailwindcss/line-clamp": "^0.4.0",
