--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "homepage": "https://github.com/qogita/frontend-challenge#readme",
   "dependencies": {
     "next": "^12.2.4",
+    "next-persist": "^1.2.4",
     "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -39,6 +41,8 @@
     "@types/eslint": "^7.29.0",
     "@types/jest": "^28.1.6",
     "@types/react": "18.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "autoprefixer": "^10.3.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^28.1.3",
